--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.2.0",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
